<resources>
    <string name="app_name">PlazaVeaApp</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="content_carrito">Carrito de compras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_producto">Productos</string>
    <string name="title_activity_direccion_registro">Registrar dirección</string>
    <string name="title_activity_carrito">Carrito</string>

    <string name="mes_caducidad_tarjeta"><font size="40">Mes</font></string>
    <string name="anio_caducidad_tarjeta"><font size="40">Año</font></string>
    <string name="guion">___</string>
    <string name="frag_home_label">Inicio</string>
    <string name="boton_registrar">Registrar</string>
    <string name="boton_registrarse">Registrarse</string>
    <string name="boton_iniciarseison">Iniciar sesión</string>
    <string name="boton_registrateaqui">Regístrate aqui</string>
    <string name="boton_guardar_direccion">Guardar Dirección</string>
    <string name="boton_cerrarsesion">Cerrar Sesión</string>
    <string name="registro_titulo">Registro</string>
    <string name="login_titulo">Login</string>
    <string name="completar_datos">Completa estos datos</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_telefono">Teléfono celular</string>
    <string name="hint_fechanacimiento">Fecha de Nacimiento</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="hint_confirmarcontra">Confirmar Contraseña</string>
    <string name="ingresa_con_correoycontra">Ingresa con tu correo y contraseña</string>
    <string name="menu_historialcompras">Historial de Compras</string>
    <string name="monto">Monto</string>
    <string name="igv">IGV (18%)</string>
    <string name="total">Total</string>
    <string name="boton_elegir">Elegir</string>
    <string name="boleta">Boleta</string>
    <string name="factura">Factura</string>
    <string name="escoger_tipo_ticket">¿Qué tipo de ticket desea?</string>
    <string name="resumen_pedido">Resumen del Pedido</string>
    <string name="tipo_ticket_titulo">Tipo de Ticket</string>
    <string name="texto_ejemplo">Texto de ejemplo</string>
    <string name="boton_confcompra">Confirmar Compra</string>
    <string name="direccion_titulo">Dirección</string>
    <string name="metodopago_titulo">Método de Pago</string>
    <string name="precio_titulo">Precio a pagar</string>
    <string name="productos_titulo">Productos</string>
    <string name="id_orden">Id de Orden:</string>
    <string name="direccion_cardview">Dirección:</string>
    <string name="fecha_realizada">Fecha de compra</string>
    <string name="fecha_entrega">Entrega estimada:</string>
    <string name="productos_comprados">Productos:</string>
    <string name="frag_historial_label">Historial de Compras</string>
    <string name="success_ticket">Tu pedido ha sido registrado con éxíto</string>
    <string name="ticket_venta">Ticket de venta</string>
    <string name="sin_compras">Aún no ha realizado ninguna compra</string>
    <string name="menu_tarjetas">Tarjetas</string>
    <string name="menu_direcciones">Direcciones</string>
    <string name="olvidaste_contrasenia">¿Olvidaste tu Contraseña?</string>
    <string name="cambiar_contra">Cambiar Contraseña</string>
    <string name="cambiar">Cambiar</string>
    <string name="ingresa_nueva_contra">Completa los siguientes campos</string>
    <string name="hint_nuevacontrasenia">Nueva Contraseña</string>
    <string name="hint_confirmarnuevacontra">Confirmar Nueva Contraseña</string>
    <string name="hint_contraseniaact">Contraseña Actual</string>
    <string name="gracias">Gracias por comprar en Plaza Vea</string>
    <string name="detalle_producto">Detalle de Producto</string>
    <string name="lista_productos">Lista de Productos</string>
    <string name="registrar_ruc">Registrar RUC</string>
    <string name="registrar_tarjeta">Registrar Tarjeta</string>
    <string name="escoger_tipo_label">Escoger Tipo de Ticket</string>
    <string name="hint_numerotarjeta">Número de Tarjeta</string>
    <string name="numero_tarjeta">Número de Tarjeta:</string>
    <string name="hint_tipotarjeta">Tipo de Tarjeta</string>
    <string name="hint_cvv">CVV</string>
    <string name="hint_nombreentarjeta">Nombre en la Tarjeta</string>
    <string name="tipo_tarjeta">Tipo de Tarjeta:</string>
    <string name="caducidad">Fecha de Caducidad:</string>
    <string name="nombre_entarjeta">Nombre en la Tarjeta:</string>
    <string name="sin_tarjetas">Aún no ha registrado ninguna tarjeta</string>
    <string name="ver_en_mapa">Ver en el mapa</string>
    <string name="id_direccion">ID de Dirección:</string>
    <string name="frag_tarjetas_label">Tus Tarjetas</string>
    <string name="frag_direcciones_label">Tus Direcciones</string>
    <string name="sin_direcciones">Aún no registró ninguna dirección</string>
    <string name="registrar_direccion">Registrar Dirección</string>
    <string name="boton_borrar">Borrar</string>
    <string name="title_activity_direccion_detalle">Detalle de tu Diirección</string>
    <string name="boton_editar">Editar</string>
    <string name="editar_tarjeta">Editar Tarjeta</string>
    <string name="numero_ruc">Número de RUC</string>
    <string name="id_ruc">ID de RUC:</string>
    <string name="numero_ruc_lista">Número de RUC:</string>
    <string name="frag_ruc_label">Tus RUC</string>
    <string name="sin_rucs">Aún no registró ningún número de RUC</string>
    <string name="volver">Volver</string>
    <string name="ruc">RUC</string>
    <string name="o">O</string>
    <string name="boton_regnuevoruc">Registrar Nuevo RUC</string>
    <string name="boton_regnuevadir">Registrar Nueva Dirección</string>
    <string name="boton_regnuevatar">Registrar Nueva Tarjeta</string>
    <string name="estado_pedido">Estado del pedido</string>
    <string name="Tienda">Tienda</string>
    <string name="mantener_sesion">Mantener sesión iniciada</string>
    <string name="label_producto">Producto:</string>
    <string name="label_preciounidad">Precio x Unidad:</string>
    <string name="label_cantidad">Cantidad:</string>
    <string name="label_preciototal">Precio Total:</string>
    <string name="repartidor">Repartidor:</string>
    <string name="fecha_realizada_cv">Fecha de Compra:</string>
    <string name="entregado_el">Entregado el día:</string>
    <string name="cancelado_el">Cancelado el día:</string>
    <string name="simple_caducidad">Caducidad:</string>
    <string name="cancelar">Cancelar Orden</string>
    <string name="estado_pedido_cv">Estado:</string>
    <string name="finalizar">Finalizar</string>
    <string name="pagina">Página:</string>
    <string name="boton_selectienda">Seleccionar Tienda En El Mapa</string>
    <string name="ninguna_tienda_selec">Ninguna tienda seleccionada</string>
    <string name="title_activity_listar_tiendas">Escoge una Tienda</string>
    <string name="mensaje_mapa">Introduzca una dirección y mueva el cursor según convenga</string>
    <string name="escoger_tienda">Esocger Tienda</string>
    <string name="list_ruc_label">Tus RUC</string>
</resources>